fixed the bug of not showing history content when adding new tweet

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -61,7 +61,7 @@ main form {
   color: red;
 }
 
-.new-tweet p {
+.new-tweet .error-message {
   display: none;
   font-size: medium;
   color: red;
